# tinycompiler

./: Makefile  Makefile.in  README.md  configure  configure.ac  main.c  mytest.tiny  quicktest.sh  run.sh  scanner.c  scanner.h
examples/: mytest.tiny
scanner/: Makefile  main.c
src/: Makefile.am  Makefile.in  main.c  parser.c  parser.h  scanner.c  scanner.h
